--- a/www.nass.gov.ng/26ffb9f66ad108a7516a6e18a3c99080dc011731.yml
+++ b/www.nass.gov.ng/26ffb9f66ad108a7516a6e18a3c99080dc011731.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:47:47 GMT
+    - Sat, 11 Aug 2018 00:28:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hzz8cqsZQEwe%2CkdsEBVrW2; path=/
+    - PHPSESSID=1iwvf5BEQTkSiC-GEYfat3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:47:47 GMT
+recorded_at: Sat, 11 Aug 2018 00:28:11 GMT
