--- a/www.nass.gov.ng/65526dcafc4704c72ecc3a99b50f8638fb76244a.yml
+++ b/www.nass.gov.ng/65526dcafc4704c72ecc3a99b50f8638fb76244a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 09:56:31 GMT
+    - Sat, 11 Aug 2018 00:37:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fMy%2CIrAts9tjh4OW1GKPX2; path=/
+    - PHPSESSID=5s4aGqMQEXrqPYqbqeg4H3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 09:56:31 GMT
+recorded_at: Sat, 11 Aug 2018 00:37:57 GMT
