--- a/www.nass.gov.ng/2e82d8ca95ab9bd651db94939917f7bd415d6eda.yml
+++ b/www.nass.gov.ng/2e82d8ca95ab9bd651db94939917f7bd415d6eda.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:01:50 GMT
+    - Sat, 11 Aug 2018 00:41:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AQ0PiE0nzYG%2CQ5tj5sVkP3; path=/
+    - PHPSESSID=XN1Pqd3dqr2bXr9uKgjvK3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:01:50 GMT
+recorded_at: Sat, 11 Aug 2018 00:41:48 GMT
