--- a/www.nass.gov.ng/2b2a82aa748928666c604ef6addeff49e48971db.yml
+++ b/www.nass.gov.ng/2b2a82aa748928666c604ef6addeff49e48971db.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:05:51 GMT
+    - Sat, 11 Aug 2018 00:46:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vLlSpBQw9X9e-xq%2CmXbFB3; path=/
+    - PHPSESSID=GGf8dVULnh6VR2AXtPUrp1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:05:52 GMT
+recorded_at: Sat, 11 Aug 2018 00:46:13 GMT
