--- a/www.nass.gov.ng/45ea15b183122377b250716f682f7d84f8f895da.yml
+++ b/www.nass.gov.ng/45ea15b183122377b250716f682f7d84f8f895da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:16:41 GMT
+    - Sat, 11 Aug 2018 00:56:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2SrshFENREw1mJl5y7DIW0; path=/
+    - PHPSESSID=eXi%2CDp1mY-l2QOG-6qlwP3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:16:41 GMT
+recorded_at: Sat, 11 Aug 2018 00:56:17 GMT
