--- a/www.nass.gov.ng/18e5bfa5564c7bfe47ee3b9445fe91c167c870aa.yml
+++ b/www.nass.gov.ng/18e5bfa5564c7bfe47ee3b9445fe91c167c870aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:22:32 GMT
+    - Sat, 11 Aug 2018 01:02:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CwOgvZ%2Cp4KaT9SUFP48EM1; path=/
+    - PHPSESSID=5w-dHWJ2pHIZB8iN0a3oF3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:22:32 GMT
+recorded_at: Sat, 11 Aug 2018 01:02:33 GMT
