--- a/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
+++ b/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:26:49 GMT
+    - Sat, 11 Aug 2018 01:07:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7yfHa2KC0tLcSss7a1Ovb2; path=/
+    - PHPSESSID=lsSmG9McVyn9HpmVxqw5%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:26:50 GMT
+recorded_at: Sat, 11 Aug 2018 01:07:09 GMT
