--- a/www.nass.gov.ng/f4f7c03c74a1ffbd76701c766d18178111c79044.yml
+++ b/www.nass.gov.ng/f4f7c03c74a1ffbd76701c766d18178111c79044.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:28:09 GMT
+    - Sat, 11 Aug 2018 01:07:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B7QrRLgvk-%2Cp%2ClpFV3GMV2; path=/
+    - PHPSESSID=SvtP4zrt9Vao7ZG7Qjz763; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:28:09 GMT
+recorded_at: Sat, 11 Aug 2018 01:07:59 GMT
