--- a/www.nass.gov.ng/f6ec8cd905ffa8ff23127ce007726081e410d7c2.yml
+++ b/www.nass.gov.ng/f6ec8cd905ffa8ff23127ce007726081e410d7c2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:29:00 GMT
+    - Sat, 11 Aug 2018 01:08:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GmH%2CBfVTEhiPXT4dUQkCw2; path=/
+    - PHPSESSID=fIyYcBPDqNiBiVUvBs6Kw3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:29:00 GMT
+recorded_at: Sat, 11 Aug 2018 01:08:46 GMT
