--- a/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
+++ b/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:34:57 GMT
+    - Sat, 11 Aug 2018 01:13:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2COOEGzQm5UunzPgP4yOFt3; path=/
+    - PHPSESSID=Xgfbknp6o3uRmpxo96frM2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:34:57 GMT
+recorded_at: Sat, 11 Aug 2018 01:13:05 GMT
