--- a/www.nass.gov.ng/2744f90c641aa3b78e331ee0a6706d996a7839a2.yml
+++ b/www.nass.gov.ng/2744f90c641aa3b78e331ee0a6706d996a7839a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:36:08 GMT
+    - Sat, 11 Aug 2018 01:13:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=txA%2CJLtByhrOM-RbaPaN%2C2; path=/
+    - PHPSESSID=A%2CrxpRW3zNh8g0tL3Or5W3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:36:09 GMT
+recorded_at: Sat, 11 Aug 2018 01:13:49 GMT
