--- a/www.nass.gov.ng/ac2a0384f80d7007e59e5450883b369a77c340b1.yml
+++ b/www.nass.gov.ng/ac2a0384f80d7007e59e5450883b369a77c340b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:37:02 GMT
+    - Sat, 11 Aug 2018 01:14:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dFd%2Cxb6DHO3PtLf5FCSXR0; path=/
+    - PHPSESSID=OVpHk49PRNjvTuobm-85v1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:37:02 GMT
+recorded_at: Sat, 11 Aug 2018 01:14:35 GMT
