--- a/www.nass.gov.ng/6f47f67c5fdc55986b67aa62b43a6e655fd3dbca.yml
+++ b/www.nass.gov.ng/6f47f67c5fdc55986b67aa62b43a6e655fd3dbca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:44:28 GMT
+    - Sat, 11 Aug 2018 01:22:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N4HSKmew0sC4CoR8d3xGX3; path=/
+    - PHPSESSID=fX4NzM2Aq%2CnRZ9l1NWEiD3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:44:30 GMT
+recorded_at: Sat, 11 Aug 2018 01:22:15 GMT
