--- a/www.nass.gov.ng/09ee964da8d5d1cb1412728efb96a06b437ff13e.yml
+++ b/www.nass.gov.ng/09ee964da8d5d1cb1412728efb96a06b437ff13e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:51:46 GMT
+    - Sat, 11 Aug 2018 01:28:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=De1zlUOPozBRSlIQp%2C%2C9F2; path=/
+    - PHPSESSID=bmXLsdiv6qPG6n9XAVOaM0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:51:47 GMT
+recorded_at: Sat, 11 Aug 2018 01:28:34 GMT
