--- a/www.nass.gov.ng/62b41d3444d013b66560262296d5941bd7ddf640.yml
+++ b/www.nass.gov.ng/62b41d3444d013b66560262296d5941bd7ddf640.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:56:19 GMT
+    - Sat, 11 Aug 2018 01:31:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Fx-L6QFPnYPO%2CiwDlGrJD0; path=/
+    - PHPSESSID=6AG54fAVIQyB%2CHoBwOsqv0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:56:19 GMT
+recorded_at: Sat, 11 Aug 2018 01:31:40 GMT
