--- a/www.nass.gov.ng/ea4a8f764d19b610f1a860bfe130c6d2277522c3.yml
+++ b/www.nass.gov.ng/ea4a8f764d19b610f1a860bfe130c6d2277522c3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 10:58:21 GMT
+    - Sat, 11 Aug 2018 01:34:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DEBhiJoxmFJpoOiZP1u4%2C0; path=/
+    - PHPSESSID=HJDsgv6HyOQH14%2C91BpTz1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 10:58:21 GMT
+recorded_at: Sat, 11 Aug 2018 01:34:07 GMT
