--- a/www.nass.gov.ng/6e1078bf85a5048537c386a181a60ecc0603d0f6.yml
+++ b/www.nass.gov.ng/6e1078bf85a5048537c386a181a60ecc0603d0f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:00:00 GMT
+    - Sat, 11 Aug 2018 01:36:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Mq%2CjGyEP6TOaUJaMY4q9B2; path=/
+    - PHPSESSID=sMSpNqtx0Exd8Q2Bqg5ia3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:00:00 GMT
+recorded_at: Sat, 11 Aug 2018 01:36:10 GMT
