--- a/www.nass.gov.ng/50220d338419945d784f3dfca7831b20b425c424.yml
+++ b/www.nass.gov.ng/50220d338419945d784f3dfca7831b20b425c424.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:04:56 GMT
+    - Sat, 11 Aug 2018 01:41:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AgtxULgIw8XiMIDjmgB-q3; path=/
+    - PHPSESSID=EaWiA7JzuxF1%2CQDn0OPcN3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:04:56 GMT
+recorded_at: Sat, 11 Aug 2018 01:41:55 GMT
