--- a/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
+++ b/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:06:02 GMT
+    - Sat, 11 Aug 2018 01:42:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qhiiiV3v%2CfV1sD77HYazt3; path=/
+    - PHPSESSID=0K-x7ZDwjFRig%2C5QRjkoQ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:06:02 GMT
+recorded_at: Sat, 11 Aug 2018 01:42:56 GMT
