--- a/www.nass.gov.ng/4eecb6aafa834efb639a1d559eb72bd125a7715b.yml
+++ b/www.nass.gov.ng/4eecb6aafa834efb639a1d559eb72bd125a7715b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:08:29 GMT
+    - Sat, 11 Aug 2018 01:44:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eSL33zMsqUQvn1kRKKgVZ1; path=/
+    - PHPSESSID=N1J8B96QKRmwG2ba6tE%2CP1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:08:29 GMT
+recorded_at: Sat, 11 Aug 2018 01:44:29 GMT
