--- a/www.nass.gov.ng/b88f0bb0e2e9004b3f5c25c98e5787dad1c99b18.yml
+++ b/www.nass.gov.ng/b88f0bb0e2e9004b3f5c25c98e5787dad1c99b18.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:10:47 GMT
+    - Sat, 11 Aug 2018 01:46:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iuAHSHrrBItKBySvHadPL3; path=/
+    - PHPSESSID=46Q%2CQVE%2CbQ1n4hIoIn7PL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:10:47 GMT
+recorded_at: Sat, 11 Aug 2018 01:46:45 GMT
