--- a/www.nass.gov.ng/27ce523e4a5fe1776ba40f8ef4da2abc86cc062f.yml
+++ b/www.nass.gov.ng/27ce523e4a5fe1776ba40f8ef4da2abc86cc062f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:14:50 GMT
+    - Sat, 11 Aug 2018 01:51:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zt-mwU6XRGn%2CptjMJOP7D0; path=/
+    - PHPSESSID=WsaLE6Eos1LvGj6AH-Zu40; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:14:50 GMT
+recorded_at: Sat, 11 Aug 2018 01:51:20 GMT
