--- a/www.nass.gov.ng/593bb800865c72a59de39285be25696728cf300d.yml
+++ b/www.nass.gov.ng/593bb800865c72a59de39285be25696728cf300d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:36:29 GMT
+    - Sat, 11 Aug 2018 02:09:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C59MNRWAngckYKYp5vm2Y1; path=/
+    - PHPSESSID=rcrgVCn%2CGigSEkx5aLm2X1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:36:29 GMT
+recorded_at: Sat, 11 Aug 2018 02:09:35 GMT
