--- a/www.nass.gov.ng/b4447ab8249eac06b20da78d929fc2b6c3e3c996.yml
+++ b/www.nass.gov.ng/b4447ab8249eac06b20da78d929fc2b6c3e3c996.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:42:05 GMT
+    - Sat, 11 Aug 2018 02:15:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8DyKdWd1z%2CJjMvVLSH5M82; path=/
+    - PHPSESSID=im6B72dFqnposADTo8ySs1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:42:06 GMT
+recorded_at: Sat, 11 Aug 2018 02:15:56 GMT
