--- a/www.nass.gov.ng/e8f78eddabbb8e85daac394fb8043d0b991a6784.yml
+++ b/www.nass.gov.ng/e8f78eddabbb8e85daac394fb8043d0b991a6784.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 12:09:58 GMT
+    - Sat, 11 Aug 2018 02:39:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=STbjCYWSLr3oxhX-K8UmE0; path=/
+    - PHPSESSID=MF%2CjDQaB-7Im3qUWhhN-c3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 12:09:59 GMT
+recorded_at: Sat, 11 Aug 2018 02:39:31 GMT
