--- a/www.nass.gov.ng/ae7590b78ed1a5dee73cfbe279f6909dd043e201.yml
+++ b/www.nass.gov.ng/ae7590b78ed1a5dee73cfbe279f6909dd043e201.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 12:15:19 GMT
+    - Sat, 11 Aug 2018 02:43:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OmQOnJTHwZo17v5a-TOUm2; path=/
+    - PHPSESSID=V%2CKonWNWKaXJ-x5UApL-k1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 12:15:19 GMT
+recorded_at: Sat, 11 Aug 2018 02:43:23 GMT
