--- a/www.nass.gov.ng/1fab94481472e6b5afc555d7bdb273812cb3f480.yml
+++ b/www.nass.gov.ng/1fab94481472e6b5afc555d7bdb273812cb3f480.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 12:19:59 GMT
+    - Sat, 11 Aug 2018 02:48:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qHcWyl4GcvFyYDWQPJTY00; path=/
+    - PHPSESSID=gIMaYUgt%2CIyJ3lcdiRFKo3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 12:20:00 GMT
+recorded_at: Sat, 11 Aug 2018 02:48:03 GMT
