--- a/www.nass.gov.ng/dea4b275aefe41f0c8b7edeb8447be56b2fd6472.yml
+++ b/www.nass.gov.ng/dea4b275aefe41f0c8b7edeb8447be56b2fd6472.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 12:30:26 GMT
+    - Sat, 11 Aug 2018 02:57:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H0p6D0w4M1iJRz6fGnDP%2C0; path=/
+    - PHPSESSID=jQtU0Wq262UA0R0oLWU233; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 12:30:27 GMT
+recorded_at: Sat, 11 Aug 2018 02:57:54 GMT
