--- a/www.nass.gov.ng/2900a36e5a875101d5a6e05e3e8f647118aad31f.yml
+++ b/www.nass.gov.ng/2900a36e5a875101d5a6e05e3e8f647118aad31f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 12:50:57 GMT
+    - Sat, 11 Aug 2018 03:16:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VgsbSI7tN9NST%2Cfa8plfW1; path=/
+    - PHPSESSID=OST9XLvVrntcwoMV6SxuC3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 12:50:57 GMT
+recorded_at: Sat, 11 Aug 2018 03:16:04 GMT
