--- a/www.nass.gov.ng/c54ac3b18c86fbcdd5fac65df595a2e4a10c9f8f.yml
+++ b/www.nass.gov.ng/c54ac3b18c86fbcdd5fac65df595a2e4a10c9f8f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 13:01:08 GMT
+    - Sat, 11 Aug 2018 03:22:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QGqfsAnAHL4TIHZsuDulw3; path=/
+    - PHPSESSID=O9YPjy7UPd0AzJk3m%2C25H2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 13:01:09 GMT
+recorded_at: Sat, 11 Aug 2018 03:22:10 GMT
