--- a/www.nass.gov.ng/1e9092d3a99a8fba8f29d11cce7ad40677cc4466.yml
+++ b/www.nass.gov.ng/1e9092d3a99a8fba8f29d11cce7ad40677cc4466.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 13:14:29 GMT
+    - Sat, 11 Aug 2018 03:33:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1-MIc3OQ6Uny-GS92sOsj1; path=/
+    - PHPSESSID=9J9oM8ina%2CsewG5aksTs41; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 13:14:29 GMT
+recorded_at: Sat, 11 Aug 2018 03:33:39 GMT
